--- a/bid/src/main/res/values/string.xml
+++ b/bid/src/main/res/values/string.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="bid_overview_on_going_bid">On-going bids</string>
+    <string name="bid_custom_bid_label">Bid Amount</string>
+    <string name="bid_custom_bid_hint">Enter a bid amount that is higher than current bid</string>
     <string name="bid_custom_button_text">Custom</string>
-    <string name="bid_increment_button_text">Bid: RM%1$d</string>
-    <string name="bid_item_info_price">RM %1$d</string>
+    <string name="bid_increment_button_text">Bid: RM%1$.2f</string>
+    <string name="bid_item_info_price">RM %1$.2f</string>
+    <string name="bid_dialog_positive_button_text">Bid</string>
+    <string name="bid_dialog_negative_button_text">Cancel</string>
     <string name="bid_chat_input_hint">Type your message here and press enter to send</string>
     <string name="bid_detail_bid_history">Bid History</string>
+    <string name="bid_overview_title">CollektrBid</string>
 </resources>
